--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
     "fresh": "^0.5.2",
+    "global": "^4.4.0",
     "has-symbols": "^1.0.3",
     "has-tostringtag": "^1.0.0",
     "http-assert": "^1.5.0",
     "http-errors": "^1.8.1",
     "inherits": "^2.0.4",
     "is-generator-function": "^1.0.10",
+    "jsonwebtoken": "^9.0.0",
     "keygrip": "^1.1.0",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
@@ -32,7 +34,6 @@
     "koa-convert": "^2.0.0",
     "koa-cors": "^0.0.16",
     "koa-helmet": "^7.0.2",
-    "koa-jwt": "^4.0.4",
     "koa-router": "^12.0.0",
     "media-typer": "^0.3.0",
     "mime-db": "^1.52.0",
@@ -56,7 +57,9 @@
     "ylru": "^1.3.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
